// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketsResolver addTicket() fails adding a new ticket due to missing data 1`] = `
Array [
  [UserInputError: Variable "$ticketInput" got invalid value { status: "pending", deadline: "2021-12-31T23:00:00.000Z", description: "Test users", initial_time_estimated: 1, total_time_spent: 0, advancement: 0, users: [[Object]] }; Field "subject" of required type "String!" was not provided.],
]
`;

exports[`TicketsResolver addTicket() fails adding a new ticket due to wrong data 1`] = `
Array [
  [UserInputError: Variable "$ticketInput" got invalid value 123 at "ticketInput.subject"; String cannot represent a non string value: 123],
]
`;

exports[`TicketsResolver deleteTicket() fails deleting a specific ticket due to wrong ID 1`] = `undefined`;

exports[`TicketsResolver getOneTicket() fails getting a specific ticket due to wrong ID 1`] = `
Array [
  [GraphQLError: Cannot return null for non-nullable field Query.getOneTicket.],
]
`;
